task1-hardening/ledger-deploymentone.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-db
  labels:
    app: ledger-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-db
  template:
    metadata:
      labels:
        app: ledger-db
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 999
      containers:
        - name: ledger-db
          image: postgres:15-alpine
          securityContext:
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
            - name: dbrun
              mountPath: /var/run/postgresql
      volumes:
        - name: pgdata
          emptyDir: {}
        - name: dbrun
          emptyDir: {}
